[gd_scene load_steps=18 format=2]

[ext_resource path="res://Action RPG Resources/HitandHurt boxes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Action RPG Resources/Enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://Action RPG Resources/Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://Action RPG Resources/Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Action RPG Resources/Enemies/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Action RPG Resources/Enemies/HuntZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Action RPG Resources/HitandHurt boxes/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Bat",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.15816

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.62219
height = 2.70719

[sub_resource type="CircleShape2D" id=9]
radius = 73.2124

[sub_resource type="CircleShape2D" id=10]
radius = 5.01502

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="Batty" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Bat"
frame = 4
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -14.9405 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="HuntZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="HuntZone" index="0"]
modulate = Color( 0.862745, 0.27451, 0.117647, 0.368627 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 10 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invinc_start" from="Hurtbox" to="." method="_on_Hurtbox_invinc_start"]
[connection signal="no_hp" from="Stats" to="." method="_on_Stats_no_hp"]

[editable path="Hurtbox"]
[editable path="HuntZone"]
[editable path="Hitbox"]
